Some minor modifications to section

--- a/section_1.ipynb
+++ b/section_1.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/msfasha/307307-BI-Methods-LLMs/blob/main/section_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -20,7 +20,7 @@
         "\n",
         "#### **1.1 What is NLP and Why Is It Important?**\n",
         "**Definition:**  \n",
-        "Natural Language Processing (NLP) is a field of Artificial Intelligence that enables computers to understand, interpret, and generate human language. NLP bridges the gap between human communication and machine understanding, allowing businesses to analyze and leverage text data effectively.\n",
+        "Natural Language Processing (NLP) is a field of Artificial Intelligence that enables computers to understand, interpret, and generate human language.<br> NLP bridges the gap between human communication and machine understanding, allowing businesses to analyze and leverage text data effectively.\n",
         "\n",
         "**Applications of NLP in Business:**\n",
         "1. **Customer Insights:** Sentiment analysis of customer reviews and feedback.\n",
@@ -53,33 +53,55 @@
         "\n",
         "1. **Tokenization:** Breaking text into smaller components, such as words or sentences.\n",
         "2. **Removing Stopwords:** Filtering out common words (e.g., \"is,\" \"the\") that don’t contribute much meaning.\n",
-        "3. **Stemming and Lemmatization:** Reducing words to their root form for consistency.\n",
-        "\n",
+        "3. **Stemming and Lemmatization:** Reducing words to their root form for consistency."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "**Python Code:**\n",
         "\n",
-        "First of all, we need to install NLTN, Python main NLP library"
+        "First of all, we need to install NLTN, Python main NLP library.<br>\n",
+        "The Natural Language Toolkit (NLTK) is a comprehensive library for natural language processing (NLP) in Python. It provides easy-to-use interfaces to over 50 corpora and lexical resources, such as WordNet, along with a suite of text processing libraries for classification, tokenization, stemming, tagging, parsing, and semantic reasoning.<br> NLTK also includes wrappers for industrial-strength NLP libraries. It is widely used for research and educational purposes due to its simplicity and extensive documentation."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "orFLKmRW_w-E",
-        "outputId": "9ee75d3d-93e0-45b4-83de-d1ac9e34ee38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "orFLKmRW_w-E",
+        "outputId": "9ee75d3d-93e0-45b4-83de-d1ac9e34ee38"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Requirement already satisfied: nltk in /usr/local/lib/python3.11/dist-packages (3.9.1)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.11/dist-packages (from nltk) (8.1.8)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.11/dist-packages (from nltk) (1.4.2)\n",
-            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.11/dist-packages (from nltk) (2024.11.6)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from nltk) (4.67.1)\n"
+            "Collecting nltk\n",
+            "  Downloading nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Collecting click (from nltk)\n",
+            "  Downloading click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
+            "Requirement already satisfied: joblib in /home/me/myenv/lib/python3.12/site-packages (from nltk) (1.4.2)\n",
+            "Collecting regex>=2021.8.3 (from nltk)\n",
+            "  Downloading regex-2024.11.6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
+            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.5/40.5 kB\u001b[0m \u001b[31m406.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mMB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+            "\u001b[?25hCollecting tqdm (from nltk)\n",
+            "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+            "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.7/57.7 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
+            "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m:01\u001b[0m\n",
+            "\u001b[?25hDownloading regex-2024.11.6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (796 kB)\n",
+            "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m796.9/796.9 kB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+            "\u001b[?25hDownloading click-8.1.8-py3-none-any.whl (98 kB)\n",
+            "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.2/98.2 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+            "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.5/78.5 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: tqdm, regex, click, nltk\n",
+            "Successfully installed click-8.1.8 nltk-3.9.1 regex-2024.11.6 tqdm-4.67.1\n"
           ]
         }
       ],
@@ -97,6 +119,41 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hm7vpYRoAT8I",
+        "outputId": "ce88de76-a05e-453e-bc0b-3f00fe33fa34"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tokens: ['Natural', 'Language', 'Processing', 'is', 'an', 'exciting', 'field', 'of', 'Artificial', 'Intelligence', '!']\n",
+            "Filtered Tokens: ['Natural', 'Language', 'Processing', 'exciting', 'field', 'Artificial', 'Intelligence', '!']\n",
+            "Stemmed Tokens: ['natur', 'languag', 'process', 'excit', 'field', 'artifici', 'intellig', '!']\n",
+            "Lemmatized Tokens: ['Natural', 'Language', 'Processing', 'exciting', 'field', 'Artificial', 'Intelligence', '!']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to /home/me/nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt to /home/me/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /home/me/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /home/me/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n"
+          ]
+        }
+      ],
       "source": [
         "import nltk\n",
         "from nltk.tokenize import word_tokenize\n",
@@ -131,41 +188,6 @@
         "lemmatizer = WordNetLemmatizer()\n",
         "lemmatized_tokens = [lemmatizer.lemmatize(word) for word in filtered_tokens]\n",
         "print(\"Lemmatized Tokens:\", lemmatized_tokens)"
-      ],
-      "cell_type": "code",
-      "metadata": {
-        "id": "Hm7vpYRoAT8I",
-        "outputId": "ce88de76-a05e-453e-bc0b-3f00fe33fa34",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n",
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tokens: ['Natural', 'Language', 'Processing', 'is', 'an', 'exciting', 'field', 'of', 'Artificial', 'Intelligence', '!']\n",
-            "Filtered Tokens: ['Natural', 'Language', 'Processing', 'exciting', 'field', 'Artificial', 'Intelligence', '!']\n",
-            "Stemmed Tokens: ['natur', 'languag', 'process', 'excit', 'field', 'artifici', 'intellig', '!']\n",
-            "Lemmatized Tokens: ['Natural', 'Language', 'Processing', 'exciting', 'field', 'Artificial', 'Intelligence', '!']\n"
-          ]
-        }
       ]
     },
     {
@@ -198,11 +220,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Q_me1aYl_w-Q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Bag of Words Matrix:\n",
+            "[[1 0 0 0 0 1 0 0 1 0 0 0]\n",
+            " [0 1 0 0 0 1 1 1 0 1 1 0]\n",
+            " [0 0 1 1 1 0 1 0 1 0 0 1]]\n",
+            "Feature Names: ['amazing' 'future' 'helps' 'human' 'in' 'is' 'language' 'natural' 'nlp'\n",
+            " 'processing' 'the' 'understanding']\n",
+            "\n",
+            "TF-IDF Matrix:\n",
+            "[[0.68091856 0.         0.         0.         0.         0.51785612\n",
+            "  0.         0.         0.51785612 0.         0.         0.        ]\n",
+            " [0.         0.44036207 0.         0.         0.         0.3349067\n",
+            "  0.3349067  0.44036207 0.         0.44036207 0.44036207 0.        ]\n",
+            " [0.         0.         0.44036207 0.44036207 0.44036207 0.\n",
+            "  0.3349067  0.         0.3349067  0.         0.         0.44036207]]\n",
+            "Feature Names: ['amazing' 'future' 'helps' 'human' 'in' 'is' 'language' 'natural' 'nlp'\n",
+            " 'processing' 'the' 'understanding']\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
         "\n",
@@ -273,11 +318,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "pt0u7qx__w-R"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Magnitude of vector_a: 3.605551275463989\n",
+            "Sum of vector_a and vector_b: [6 4]\n",
+            "Difference of vector_a and vector_b: [-2  2]\n",
+            "Dot product of vector_a and vector_b: 11\n",
+            "Scaled vector_a: [4 6]\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -318,27 +375,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "ddrhtXz3_w-R"
+        "id": "VZ0VcmZD_w-R"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cosine similarity between vector_c and vector_d: 0.0\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "\n",
         "# Example vectors\n",
         "vector_c = np.array([1, 0])\n",
-        "vector_d = np.array([0, 1])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "VZ0VcmZD_w-R"
-      },
-      "outputs": [],
-      "source": [
+        "vector_d = np.array([0, 1])\n",
+        "\n",
         "# Reshape vectors to 2D arrays (required for cosine similarity)\n",
         "similarity = cosine_similarity([vector_c], [vector_d])\n",
         "print(\"Cosine similarity between vector_c and vector_d:\", similarity[0][0])"
@@ -387,11 +443,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "Fj81Qxi7_w-S"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Similarity between 'king' and 'queen': 0.9899494936611666\n",
+            "Similarity between 'man' and 'woman': 0.9374252720097653\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
@@ -471,11 +536,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "hxXbt4z2_w-S"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tokens: ['الذكاء', 'الاصطناعي', 'يساعد', 'في', 'معالجة', 'اللغة', 'العربية', 'بشكل', 'كبير', '.']\n",
+            "Filtered Tokens: ['الذكاء', 'الاصطناعي', 'يساعد', 'معالجة', 'اللغة', 'العربية', 'بشكل', 'كبير', '.']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /home/me/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt to /home/me/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ]
+        }
+      ],
       "source": [
         "import nltk\n",
         "from nltk.tokenize import word_tokenize\n",
@@ -521,11 +605,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "4OQkskO2_w-T"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'tashaphyne'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtashaphyne\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstemming\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ArabicLightStemmer\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Initialize the stemmer\u001b[39;00m\n\u001b[1;32m      4\u001b[0m arabic_stemmer \u001b[38;5;241m=\u001b[39m ArabicLightStemmer()\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tashaphyne'"
+          ]
+        }
+      ],
       "source": [
         "from tashaphyne.stemming import ArabicLightStemmer\n",
         "\n",
@@ -629,8 +725,12 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "myenv",
       "language": "python",
       "name": "python3"
     },
@@ -644,11 +744,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
