add introductory notebook for using Ollama in Google Colab and include Colab badge

--- a/section-rag.ipynb
+++ b/section-rag.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In \"/>"
+   ]
   },
   {
    "cell_type": "markdown",
