--- a/part-1/5-introduction to ollama.ipynb
+++ b/part-1/5-introduction to ollama.ipynb
@@ -1,61 +1,67 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Welcome to your first use of an LLM!\n",
-        "\n",
-        "If this is your first use of Google Colab, welcome to that, too! In later weeks we will explore this in more detail. For now, just follow the instructions and let me know any questions.\n",
-        "\n",
-        "First, press the `Connect` or `Reconnect` button near the top right of this window to start a new CPU box running in the Cloud.\n",
-        "\n",
-        "Next click in the \"cell\" immediately below this one, and press Shift+Enter to execute the cell. Ollama should be downloaded and installed. The exclamation mark at the start of the line indicates that this is a shell command, not python.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "4MS9vPBDDkd6"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!curl -fsSL https://ollama.com/install.sh | sh"
-      ],
-      "metadata": {
-        "id": "nZcqFHYODOBO"
-      },
-      "execution_count": null,
-      "outputs": []
+        "## What is Ollama"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4MS9vPBDDkd6"
+      },
+      "source": [
+        "## Running Ollama on Google Colab"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This file is based on:\n",
+        "https://github.com/ed-donner/llm_engineering/blob/main/README.md"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Download and Install Ollama"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nZcqFHYODOBO"
+      },
+      "outputs": [],
+      "source": [
+        "!curl -fsSL https://ollama.com/install.sh | sh"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N3-RFec0EMwI"
+      },
       "source": [
         "## When this completes..\n",
         "\n",
         "The cell above should now say: `Install complete. Run \"ollama\" from the command line.`\n",
         "\n",
         "Now click in the cell below and press Shift+Enter.\n"
-      ],
-      "metadata": {
-        "id": "N3-RFec0EMwI"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_j3vwuDHDwxI"
+      },
+      "outputs": [],
       "source": [
         "# Start Ollama server\n",
         "\n",
@@ -66,114 +72,123 @@
         "\n",
         "# The kernel can continue execution while the process runs in the background\n",
         "print(\"The 'ollama serve' process is running in the background.\")"
-      ],
-      "metadata": {
-        "id": "_j3vwuDHDwxI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "jx6JAHmKEkOs"
+      },
       "source": [
         "# Great!\n",
         "\n",
         "It should now say above: `The 'ollama serve' process is running in the background`.\n",
         "\n",
         "Now press Shift+Enter in each of the cells below in turn to try out Ollama."
-      ],
-      "metadata": {
-        "id": "jx6JAHmKEkOs"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "r3VSOQYiGzco"
+      },
+      "outputs": [],
       "source": [
         "# Download the model that we want to use - this might take a couple of mins\n",
         "# The exclamation mark at the start of the line indicates that this is a shell command, not python\n",
         "\n",
         "!ollama pull llama3.2:1b"
-      ],
-      "metadata": {
-        "id": "r3VSOQYiGzco"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Gr4iQ6alDqdf"
+      },
+      "outputs": [],
       "source": [
         "# install the Ollama python API package\n",
         "\n",
         "!pip install ollama"
-      ],
-      "metadata": {
-        "id": "Gr4iQ6alDqdf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MZ7EoToiDqaq"
+      },
+      "outputs": [],
       "source": [
         "# import the package\n",
         "\n",
         "import ollama"
-      ],
-      "metadata": {
-        "id": "MZ7EoToiDqaq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZA2T87uWCMKl"
+      },
+      "outputs": [],
       "source": [
         "# Your first message to your very own LLM running \"locally\" (well, on your cloud box)\n",
         "\n",
         "message = \"Hi there! This is my first message to an LLM!\""
-      ],
-      "metadata": {
-        "id": "ZA2T87uWCMKl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uIRqzV2jDLLJ"
+      },
+      "outputs": [],
       "source": [
         "# Put this message into the format expected by Ollama\n",
         "\n",
         "messages = [{\"role\": \"user\", \"content\": message}]"
-      ],
-      "metadata": {
-        "id": "uIRqzV2jDLLJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Qehl86LOAuzQ"
+      },
+      "outputs": [],
       "source": [
         "# Let's do this!!\n",
         "\n",
         "response = ollama.chat(model=\"llama3.2:1b\", messages=messages)\n",
         "print(response['message']['content'])"
-      ],
-      "metadata": {
-        "id": "Qehl86LOAuzQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "c9GZvqvzFTmU"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
