add detailed introduction and usage instructions for Ollama in the notebook

--- a/part-1/1-introduction_to_nlp.ipynb
+++ b/part-1/1-introduction_to_nlp.ipynb
@@ -16,7 +16,7 @@
         "id": "CZo4Cyqf_w-B"
       },
       "source": [
-        "### **Section 1: Natural Language Processing (NLP) Basics**\n",
+        "### **Natural Language Processing (NLP) Basics**\n",
         "\n",
         "#### **1.1 What is NLP and Why Is It Important?**\n",
         "**Definition:**  \n",
