--- a/part-1/6-website summary ollama.ipynb
+++ b/part-1/6-website summary ollama.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "29ddd15d-a3c5-4f4e-a678-873f56162724",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dac0a679-599c-441f-9bf2-ddc73d35b940",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7bb9c624-14f0-4945-a719-8ddb64f66f47",
    "metadata": {},
    "outputs": [],
@@ -136,10 +136,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "42b9f644-522d-4e05-a691-56e7658c0ea9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generative AI has numerous business applications across various industries, including:\n",
+      "\n",
+      "1. **Content Generation**: AI can generate high-quality content such as articles, social media posts, product descriptions, and more. This can help reduce content creation costs and increase efficiency.\n",
+      "2. **Customer Service Chatbots**: Generative AI-powered chatbots can provide 24/7 customer support, answering common questions and resolving issues in a personalized manner.\n",
+      "3. **Product Design and Development**: AI can generate 3D models, prototypes, and product designs, reducing the need for manual drafting and improving product development speed.\n",
+      "4. **Marketing and Advertising**: Generative AI can create personalized advertisements, social media posts, and email campaigns, increasing engagement and conversion rates.\n",
+      "5. **Data Analysis and Visualization**: AI can analyze large datasets and generate insights, visualizations, and predictions, helping businesses make data-driven decisions.\n",
+      "6. **Automated Content Moderation**: Generative AI-powered systems can detect and remove inappropriate content from social media platforms, ensuring a safer online environment.\n",
+      "7. **Language Translation**: AI-powered language translation tools can help businesses communicate with international customers, increasing global reach and revenue.\n",
+      "8. **Financial Modeling and Forecasting**: Generative AI can analyze financial data, generate forecasts, and predict market trends, helping businesses make informed investment decisions.\n",
+      "9. **Product Recommendation Systems**: AI-powered recommendation engines can suggest products to customers based on their preferences, increasing sales and customer satisfaction.\n",
+      "10. **Digital Asset Management**: Generative AI can automate the management of digital assets, such as images, videos, and audio files, reducing storage costs and improving content organization.\n",
+      "\n",
+      "Some specific business applications of Generative AI include:\n",
+      "\n",
+      "* **Automated product description generation**: AI can generate high-quality product descriptions based on product features, specifications, and customer reviews.\n",
+      "* **Personalized email marketing**: Generative AI can analyze customer data and generate personalized email campaigns that increase engagement and conversion rates.\n",
+      "* **Custom content creation for social media**: AI can create engaging social media content, such as posts, stories, and reels, increasing brand visibility and reach.\n",
+      "* **Automated chatbot conversations**: Generative AI-powered chatbots can engage in natural-sounding conversations with customers, improving customer support and satisfaction.\n",
+      "* **Predictive maintenance and quality control**: AI can analyze sensor data from manufacturing processes and predict equipment failures, reducing downtime and improving product quality.\n",
+      "\n",
+      "Overall, Generative AI has the potential to revolutionize various business applications, increasing efficiency, productivity, and revenue while improving customer experiences.\n"
+     ]
+    }
+   ],
    "source": [
     "# If this doesn't work for any reason, try the 2 versions in the following cells\n",
     "# And double check the instructions in the 'Recap on installation of Ollama' at the top of this lab\n",
@@ -163,10 +192,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "20218472",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting ollama\n",
+      "  Downloading ollama-0.4.7-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Requirement already satisfied: httpx<0.29,>=0.27 in /home/me/myenv/lib/python3.12/site-packages (from ollama) (0.27.2)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.9.0 in /home/me/myenv/lib/python3.12/site-packages (from ollama) (2.9.2)\n",
+      "Requirement already satisfied: anyio in /home/me/myenv/lib/python3.12/site-packages (from httpx<0.29,>=0.27->ollama) (4.6.2.post1)\n",
+      "Requirement already satisfied: certifi in /home/me/myenv/lib/python3.12/site-packages (from httpx<0.29,>=0.27->ollama) (2024.8.30)\n",
+      "Requirement already satisfied: httpcore==1.* in /home/me/myenv/lib/python3.12/site-packages (from httpx<0.29,>=0.27->ollama) (1.0.6)\n",
+      "Requirement already satisfied: idna in /home/me/myenv/lib/python3.12/site-packages (from httpx<0.29,>=0.27->ollama) (3.10)\n",
+      "Requirement already satisfied: sniffio in /home/me/myenv/lib/python3.12/site-packages (from httpx<0.29,>=0.27->ollama) (1.3.1)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /home/me/myenv/lib/python3.12/site-packages (from httpcore==1.*->httpx<0.29,>=0.27->ollama) (0.14.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /home/me/myenv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.23.4 in /home/me/myenv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (2.23.4)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in /home/me/myenv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (4.12.2)\n",
+      "Downloading ollama-0.4.7-py3-none-any.whl (13 kB)\n",
+      "Installing collected packages: ollama\n",
+      "Successfully installed ollama-0.4.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "7745b9c4-57dc-4867-9180-61fa5db55eb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generative AI has numerous business applications across various industries. Here are some examples:\n",
+      "\n",
+      "1. **Content Generation**: Generative AI can be used to create high-quality, engaging content such as blog posts, social media posts, product descriptions, and more. This can help businesses save time and resources while maintaining consistency in their content.\n",
+      "2. **Image and Video Creation**: Generative AI can generate images and videos that are indistinguishable from those created by humans. This can be used for marketing materials, product visuals, and more.\n",
+      "3. **Product Design**: Generative AI can assist designers in creating new product concepts, reducing the need for manual design and iteration.\n",
+      "4. **Chatbots and Virtual Assistants**: Generative AI can power chatbots and virtual assistants, enabling businesses to provide personalized customer experiences and automate routine tasks.\n",
+      "5. **Predictive Maintenance**: Generative AI can analyze sensor data from industrial equipment and predict when maintenance is needed, reducing downtime and increasing productivity.\n",
+      "6. **Personalized Marketing**: Generative AI can help create personalized marketing campaigns by analyzing customer data and behavior, and suggesting targeted messaging and offers.\n",
+      "7. **Recommendation Systems**: Generative AI can improve recommendation systems by generating personalized product suggestions based on user behavior and preferences.\n",
+      "8. **Autonomous Writing Tools**: Generative AI-powered writing tools can assist writers with research, organization, and even content generation, freeing up time for more complex tasks.\n",
+      "9. **Creative Collaboration**: Generative AI can facilitate creative collaboration between humans and machines, enabling the co-creation of new ideas and products.\n",
+      "10. **Data Analysis and Insights**: Generative AI can help analyze large datasets and generate insights that inform business decisions, such as market trends and customer behavior.\n",
+      "\n",
+      "Industries where Generative AI has the most potential for disruption include:\n",
+      "\n",
+      "1. **Marketing and Advertising**\n",
+      "2. **Content Creation and Publishing**\n",
+      "3. **Product Design and Development**\n",
+      "4. **Customer Service and Support**\n",
+      "5. **Finance and Banking**\n",
+      "6. **Healthcare and Medical Research**\n",
+      "7. **Education and Training**\n",
+      "\n",
+      "These are just a few examples of the many business applications of Generative AI. As the technology continues to evolve, we can expect to see even more innovative uses across various industries.\n"
+     ]
+    }
+   ],
    "source": [
     "import ollama\n",
     "\n",
@@ -264,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
