update lecture on Frontier LLMs to include DeepSeek and enhance descriptions

--- a/part-1/frontier models.ipynb
+++ b/part-1/frontier models.ipynb
@@ -24,14 +24,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's a structured lecture on **Frontier LLMs**, covering their makers, capabilities, differences, and some code use cases.\n",
+    "Here's the updated lecture incorporating **DeepSeek** while keeping all previously included information.\n",
     "\n",
     "---\n",
     "\n",
     "# **Frontier Large Language Models (LLMs)**  \n",
     "\n",
     "## **1. Introduction to LLMs**\n",
-    "Large Language Models (LLMs) are AI models trained on massive amounts of text data to generate human-like text, answer questions, and assist in various applications. Some of the most advanced LLMs today come from leading AI research labs, each with unique architectures, capabilities, and use cases.\n",
+    "Large Language Models (LLMs) are AI models trained on vast amounts of text data to generate human-like text, assist in various tasks, and power AI-driven applications. Some of the most advanced LLMs today come from leading AI research labs, each offering unique architectures, capabilities, and use cases.\n",
     "\n",
     "This lecture covers the major LLMs, their features, differences, and code examples to interact with them.\n",
     "\n",
@@ -47,6 +47,7 @@
     "| **Cohere**    | Command R+, Command R | Cohere API | Enterprise-focused, retrieval-augmented generation (RAG) |\n",
     "| **Meta**      | LLaMA 2, LLaMA 3 (upcoming) | meta.ai | Open-source, efficient models for researchers |\n",
     "| **Perplexity**| Perplexity AI | Search-integrated LLM | AI-powered search engine, real-time web browsing |\n",
+    "| **DeepSeek**  | DeepSeek LLM, DeepSeek Coder | DeepSeek API | Open-source, optimized for code generation and general-purpose AI |\n",
     "\n",
     "---\n",
     "\n",
@@ -157,6 +158,28 @@
     "\n",
     "---\n",
     "\n",
+    "### **🔹 DeepSeek AI**\n",
+    "- Focuses on **open-source AI development**.\n",
+    "- Provides **DeepSeek LLM** for general-purpose AI.\n",
+    "- **DeepSeek Coder** is optimized for **code generation and programming tasks**.\n",
+    "- Competes with models like **Code LLaMA and GPT-4 Code Interpreter**.\n",
+    "\n",
+    "🔹 **Use Case: Running DeepSeek Locally with Hugging Face**\n",
+    "```python\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "model_name = \"deepseek-ai/deepseek-coder-6.7b\"\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "\n",
+    "prompt = \"Write a Python function to sort a list using merge sort.\"\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
+    "outputs = model.generate(**inputs)\n",
+    "print(tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
     "## **4. Choosing the Right LLM**\n",
     "| **Use Case**        | **Best LLM** |\n",
     "|---------------------|-------------|\n",
@@ -164,8 +187,9 @@
     "| Long-context tasks | Claude 2, GPT-4 |\n",
     "| Multimodal AI (Images, Video) | Gemini 1.5, GPT-4 |\n",
     "| Enterprise & RAG | Cohere Command R+ |\n",
-    "| Open-Source Model | LLaMA 2 |\n",
+    "| Open-Source Model | LLaMA 2, DeepSeek |\n",
     "| AI Search Engine | Perplexity AI |\n",
+    "| AI for Coding | DeepSeek Coder, GPT-4 Code Interpreter |\n",
     "\n",
     "---\n",
     "\n",
@@ -177,12 +201,13 @@
     "- **Cohere Command R+** → Enterprise applications, retrieval-based AI.\n",
     "- **Meta LLaMA** → Open-source, fine-tuning flexibility.\n",
     "- **Perplexity AI** → Real-time AI-powered search.\n",
+    "- **DeepSeek** → Strong in open-source AI, specialized coding model.\n",
     "\n",
-    "For developers, choosing an LLM depends on **specific needs**, whether it's **general AI conversations, enterprise AI, multimodal processing, or open-source flexibility**.\n",
+    "For developers, choosing an LLM depends on **specific needs**, whether it's **general AI conversations, enterprise AI, multimodal processing, code generation, or open-source flexibility**.\n",
     "\n",
     "---\n",
     "\n",
-    "Would you like me to expand on any specific section? 🚀"
+    "This version includes **DeepSeek AI** while preserving all previously mentioned details. Let me know if you'd like further refinements! 🚀"
    ]
   }
  ],
