--- a/part-1/6-website summary ollama.ipynb
+++ b/part-1/6-website summary ollama.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "29ddd15d-a3c5-4f4e-a678-873f56162724",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dac0a679-599c-441f-9bf2-ddc73d35b940",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7bb9c624-14f0-4945-a719-8ddb64f66f47",
    "metadata": {},
    "outputs": [],
@@ -124,10 +124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "479ff514-e8bd-4985-a572-2ea28bb4fa40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[?25lpulling manifest ⠋ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠙ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠸ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠼ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠼ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠴ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠦ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest \n",
+      "pulling dde5aa3fc5ff... 100% ▕████████████████▏ 2.0 GB                         \n",
+      "pulling 966de95ca8a6... 100% ▕████████████████▏ 1.4 KB                         \n",
+      "pulling fcc5a6bec9da... 100% ▕████████████████▏ 7.7 KB                         \n",
+      "pulling a70ff7e570d9... 100% ▕████████████████▏ 6.0 KB                         \n",
+      "pulling 56bb8bd477a5... 100% ▕████████████████▏   96 B                         \n",
+      "pulling 34bb5ab01051... 100% ▕████████████████▏  561 B                         \n",
+      "verifying sha256 digest \n",
+      "writing manifest \n",
+      "success \u001b[?25h\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's just make sure the model is loaded\n",
     "\n",
@@ -136,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "42b9f644-522d-4e05-a691-56e7658c0ea9",
    "metadata": {},
    "outputs": [
@@ -144,28 +161,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generative AI has numerous business applications across various industries, including:\n",
+      "Generative AI has numerous business applications across various industries. Here are some examples:\n",
       "\n",
-      "1. **Content Generation**: AI can generate high-quality content such as articles, social media posts, product descriptions, and more. This can help reduce content creation costs and increase efficiency.\n",
-      "2. **Customer Service Chatbots**: Generative AI-powered chatbots can provide 24/7 customer support, answering common questions and resolving issues in a personalized manner.\n",
-      "3. **Product Design and Development**: AI can generate 3D models, prototypes, and product designs, reducing the need for manual drafting and improving product development speed.\n",
-      "4. **Marketing and Advertising**: Generative AI can create personalized advertisements, social media posts, and email campaigns, increasing engagement and conversion rates.\n",
-      "5. **Data Analysis and Visualization**: AI can analyze large datasets and generate insights, visualizations, and predictions, helping businesses make data-driven decisions.\n",
-      "6. **Automated Content Moderation**: Generative AI-powered systems can detect and remove inappropriate content from social media platforms, ensuring a safer online environment.\n",
-      "7. **Language Translation**: AI-powered language translation tools can help businesses communicate with international customers, increasing global reach and revenue.\n",
-      "8. **Financial Modeling and Forecasting**: Generative AI can analyze financial data, generate forecasts, and predict market trends, helping businesses make informed investment decisions.\n",
-      "9. **Product Recommendation Systems**: AI-powered recommendation engines can suggest products to customers based on their preferences, increasing sales and customer satisfaction.\n",
-      "10. **Digital Asset Management**: Generative AI can automate the management of digital assets, such as images, videos, and audio files, reducing storage costs and improving content organization.\n",
+      "1. **Content Creation**: Generative AI can be used to create personalized content, such as articles, social media posts, and product descriptions, at scale and with minimal human intervention.\n",
+      "2. **Product Design**: Generative AI can assist in designing new products, including 3D models, logos, and packaging designs. This can help companies reduce design costs and improve the speed of innovation.\n",
+      "3. **Marketing Automation**: Generative AI can be used to automate marketing campaigns, including email marketing, social media advertising, and personalized offers.\n",
+      "4. **Customer Service Chatbots**: Generative AI-powered chatbots can provide 24/7 customer support, helping businesses respond quickly and efficiently to customer inquiries.\n",
+      "5. **Data Analytics**: Generative AI can help analyze large datasets and identify patterns that may not be apparent through traditional data analysis methods.\n",
+      "6. **Supply Chain Optimization**: Generative AI can optimize supply chain operations by predicting demand, identifying bottlenecks, and optimizing inventory levels.\n",
+      "7. **Financial Analysis**: Generative AI can analyze financial data to predict market trends, identify potential risks, and provide investment recommendations.\n",
+      "8. **Medical Imaging Analysis**: Generative AI can help analyze medical images, such as X-rays and MRIs, to diagnose diseases more accurately and quickly than human radiologists.\n",
+      "9. **Cybersecurity**: Generative AI can be used to detect and prevent cyber attacks by analyzing network traffic and identifying potential threats in real-time.\n",
+      "10. **Creative Collaboration**: Generative AI can collaborate with human artists, writers, and designers to generate new ideas and improve creative output.\n",
       "\n",
-      "Some specific business applications of Generative AI include:\n",
+      "Some specific examples of businesses using Generative AI include:\n",
       "\n",
-      "* **Automated product description generation**: AI can generate high-quality product descriptions based on product features, specifications, and customer reviews.\n",
-      "* **Personalized email marketing**: Generative AI can analyze customer data and generate personalized email campaigns that increase engagement and conversion rates.\n",
-      "* **Custom content creation for social media**: AI can create engaging social media content, such as posts, stories, and reels, increasing brand visibility and reach.\n",
-      "* **Automated chatbot conversations**: Generative AI-powered chatbots can engage in natural-sounding conversations with customers, improving customer support and satisfaction.\n",
-      "* **Predictive maintenance and quality control**: AI can analyze sensor data from manufacturing processes and predict equipment failures, reducing downtime and improving product quality.\n",
+      "* **Amazon's AI-powered product recommendation engine**, which uses generative models to recommend products based on customer behavior and preferences.\n",
+      "* **Google's AI-powered content generation tool**, which can generate high-quality content, such as articles and blog posts, in seconds.\n",
+      "* **Microsoft's AI-powered chatbots**, which provide 24/7 customer support for businesses across various industries.\n",
+      "* **IBM's AI-powered supply chain optimization platform**, which uses generative models to optimize inventory levels and predict demand.\n",
       "\n",
-      "Overall, Generative AI has the potential to revolutionize various business applications, increasing efficiency, productivity, and revenue while improving customer experiences.\n"
+      "These are just a few examples of the many business applications of Generative AI. As the technology continues to evolve, we can expect to see even more innovative use cases across various industries.\n"
      ]
     }
    ],
@@ -192,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "20218472",
    "metadata": {},
    "outputs": [
@@ -200,8 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting ollama\n",
-      "  Downloading ollama-0.4.7-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Requirement already satisfied: ollama in /home/me/myenv/lib/python3.12/site-packages (0.4.7)\n",
       "Requirement already satisfied: httpx<0.29,>=0.27 in /home/me/myenv/lib/python3.12/site-packages (from ollama) (0.27.2)\n",
       "Requirement already satisfied: pydantic<3.0.0,>=2.9.0 in /home/me/myenv/lib/python3.12/site-packages (from ollama) (2.9.2)\n",
       "Requirement already satisfied: anyio in /home/me/myenv/lib/python3.12/site-packages (from httpx<0.29,>=0.27->ollama) (4.6.2.post1)\n",
@@ -212,10 +227,7 @@
       "Requirement already satisfied: h11<0.15,>=0.13 in /home/me/myenv/lib/python3.12/site-packages (from httpcore==1.*->httpx<0.29,>=0.27->ollama) (0.14.0)\n",
       "Requirement already satisfied: annotated-types>=0.6.0 in /home/me/myenv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (0.7.0)\n",
       "Requirement already satisfied: pydantic-core==2.23.4 in /home/me/myenv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (2.23.4)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in /home/me/myenv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (4.12.2)\n",
-      "Downloading ollama-0.4.7-py3-none-any.whl (13 kB)\n",
-      "Installing collected packages: ollama\n",
-      "Successfully installed ollama-0.4.7\n"
+      "Requirement already satisfied: typing-extensions>=4.6.1 in /home/me/myenv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (4.12.2)\n"
      ]
     }
    ],
@@ -225,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7745b9c4-57dc-4867-9180-61fa5db55eb8",
    "metadata": {},
    "outputs": [
@@ -233,30 +245,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generative AI has numerous business applications across various industries. Here are some examples:\n",
+      "Generative AI has numerous business applications across various industries, including:\n",
       "\n",
-      "1. **Content Generation**: Generative AI can be used to create high-quality, engaging content such as blog posts, social media posts, product descriptions, and more. This can help businesses save time and resources while maintaining consistency in their content.\n",
-      "2. **Image and Video Creation**: Generative AI can generate images and videos that are indistinguishable from those created by humans. This can be used for marketing materials, product visuals, and more.\n",
-      "3. **Product Design**: Generative AI can assist designers in creating new product concepts, reducing the need for manual design and iteration.\n",
-      "4. **Chatbots and Virtual Assistants**: Generative AI can power chatbots and virtual assistants, enabling businesses to provide personalized customer experiences and automate routine tasks.\n",
-      "5. **Predictive Maintenance**: Generative AI can analyze sensor data from industrial equipment and predict when maintenance is needed, reducing downtime and increasing productivity.\n",
-      "6. **Personalized Marketing**: Generative AI can help create personalized marketing campaigns by analyzing customer data and behavior, and suggesting targeted messaging and offers.\n",
-      "7. **Recommendation Systems**: Generative AI can improve recommendation systems by generating personalized product suggestions based on user behavior and preferences.\n",
-      "8. **Autonomous Writing Tools**: Generative AI-powered writing tools can assist writers with research, organization, and even content generation, freeing up time for more complex tasks.\n",
-      "9. **Creative Collaboration**: Generative AI can facilitate creative collaboration between humans and machines, enabling the co-creation of new ideas and products.\n",
-      "10. **Data Analysis and Insights**: Generative AI can help analyze large datasets and generate insights that inform business decisions, such as market trends and customer behavior.\n",
+      "1. **Content Creation**: Generative AI can be used to generate high-quality content such as articles, social media posts, and product descriptions, reducing the need for human writers and increasing content efficiency.\n",
+      "2. **Marketing Automation**: Generative AI can help create personalized marketing campaigns by generating targeted messages, product recommendations, and ad copy that resonate with customers' interests and preferences.\n",
+      "3. **Virtual Assistants**: Generative AI-powered virtual assistants can be used to provide 24/7 customer support, answering frequent questions, and helping customers with simple queries, freeing up human agents for more complex issues.\n",
+      "4. **Product Design and Development**: Generative AI can aid in the design of new products by generating concepts, prototypes, and recommendations based on market trends, customer needs, and technological capabilities.\n",
+      "5. **Data Analysis and Insights**: Generative AI algorithms can analyze large datasets to identify patterns, trends, and correlations, providing valuable insights for business decision-making.\n",
+      "6. **Automated Customer Service**: Generative AI-powered chatbots can be used to provide automated customer service, helping customers with simple queries, and routing complex issues to human agents.\n",
+      "7. **Personalized Product Recommendations**: Generative AI can analyze customer behavior and preferences to generate personalized product recommendations on e-commerce platforms, increasing sales and improving user experience.\n",
+      "8. **Content Editing and Optimization**: Generative AI-powered tools can help edit and optimize content for better search engine rankings, readability, and overall engagement.\n",
+      "9. **Digital Content Generation**: Generative AI can be used to create high-quality digital assets such as images, videos, and music, reducing the need for human creators and increasing content efficiency.\n",
+      "10. **Cybersecurity Threat Detection**: Generative AI-powered tools can analyze network traffic and identify potential cybersecurity threats in real-time, enabling swift action to mitigate risks.\n",
       "\n",
-      "Industries where Generative AI has the most potential for disruption include:\n",
+      "Some specific business applications of Generative AI include:\n",
       "\n",
-      "1. **Marketing and Advertising**\n",
-      "2. **Content Creation and Publishing**\n",
-      "3. **Product Design and Development**\n",
-      "4. **Customer Service and Support**\n",
-      "5. **Finance and Banking**\n",
-      "6. **Healthcare and Medical Research**\n",
-      "7. **Education and Training**\n",
+      "* **Chatbots for customer service**: Companies like IBM and Microsoft use Generative AI-powered chatbots to provide 24/7 customer support.\n",
+      "* **Content generation for e-commerce platforms**: Online retailers like Amazon and Walmart use Generative AI-powered tools to generate product descriptions, reviews, and recommendations.\n",
+      "* **Automated marketing campaigns**: Marketing agencies like HubSpot and Marketo use Generative AI-powered tools to create personalized marketing campaigns and automate content distribution.\n",
+      "* **Data analysis and insights for business decision-making**: Companies like Google and Amazon use Generative AI algorithms to analyze large datasets and provide actionable insights for business decision-making.\n",
       "\n",
-      "These are just a few examples of the many business applications of Generative AI. As the technology continues to evolve, we can expect to see even more innovative uses across various industries.\n"
+      "These are just a few examples of the many potential applications of Generative AI in business. As the technology continues to evolve, we can expect to see even more innovative uses across various industries.\n"
      ]
     }
    ],
