a number of new candidate files

--- a/part-1/attention and transformers.ipynb
+++ b/part-1/attention and transformers.ipynb
@@ -19,10 +19,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's a structured lecture on **Attention Mechanisms and Transformer Networks**, including their history, key concepts, and Python code examples.\n",
-    "\n",
-    "---\n",
-    "\n",
     "# **Lecture: Attention Mechanisms and Transformer Networks**\n",
     "### **1. Introduction**\n",
     "In recent years, **transformer networks** have revolutionized natural language processing (NLP) and machine learning. The **attention mechanism**, introduced in 2014, became a cornerstone of these models, enabling them to process long sequences efficiently. This lecture covers:\n",
@@ -55,9 +51,9 @@
     "\n",
     "The attention score is computed using the **scaled dot-product attention formula**:\n",
     "\n",
-    "\\[\n",
+    "$\n",
     "\\text{Attention}(Q, K, V) = \\text{softmax} \\left(\\frac{QK^T}{\\sqrt{d_k}}\\right) V\n",
-    "\\]\n",
+    "$\n",
     "\n",
     "where \\( d_k \\) is the dimension of the keys.\n",
     "\n",
@@ -83,8 +79,6 @@
     "```\n",
     "This function computes the attention-weighted sum of values.\n",
     "\n",
-    "---\n",
-    "\n",
     "### **4. The Transformer Architecture**\n",
     "A transformer consists of **an encoder-decoder structure** with multiple layers of attention.\n",
     "\n",
@@ -97,13 +91,11 @@
     "#### **4.2. Multi-Head Attention**\n",
     "Multi-head attention applies attention multiple times in parallel, concatenates the results, and projects them:\n",
     "\n",
-    "\\[\n",
+    "$\n",
     "\\text{MultiHead}(Q, K, V) = \\text{Concat}(\\text{head}_1, ..., \\text{head}_h)W^O\n",
-    "\\]\n",
+    "$\n",
     "\n",
     "where each head has independent \\( W^Q, W^K, W^V \\) matrices.\n",
-    "\n",
-    "---\n",
     "\n",
     "### **5. Implementing a Transformer Model with PyTorch**\n",
     "Now, let's implement a simple transformer block using PyTorch:\n",
@@ -145,16 +137,12 @@
     "print(output.shape)  # Output shape should be (10, 1, embed_size)\n",
     "```\n",
     "\n",
-    "---\n",
-    "\n",
     "### **6. Applications of Transformers**\n",
     "- **Machine Translation (e.g., Google Translate)**\n",
     "- **Text Generation (e.g., GPT models)**\n",
     "- **Speech Recognition (e.g., Whisper)**\n",
     "- **Computer Vision (e.g., Vision Transformers - ViTs)**\n",
     "- **Reinforcement Learning (e.g., Decision Transformers)**\n",
-    "\n",
-    "---\n",
     "\n",
     "### **7. Implementing a Pretrained Transformer (BERT)**\n",
     "Let's use Hugging Face's `transformers` library to load a pretrained **BERT model** for text classification:\n",
@@ -176,20 +164,14 @@
     "print(outputs.logits)  # Logits for classification\n",
     "```\n",
     "\n",
-    "---\n",
-    "\n",
     "### **8. Summary**\n",
     "- **Attention mechanisms** allow models to focus on relevant information.\n",
     "- **Transformers replace RNNs** with self-attention layers, enabling parallel processing.\n",
     "- **Multi-head attention** helps the model capture diverse relationships.\n",
     "- **Pretrained models like BERT and GPT** leverage transformers for NLP applications.\n",
     "\n",
-    "---\n",
-    "\n",
     "### **9. Conclusion**\n",
-    "Transformers have become the backbone of modern AI models, surpassing older architectures in efficiency and effectiveness. Future research explores **sparse attention** and **efficient transformers** to improve scalability.\n",
-    "\n",
-    "Would you like me to add more mathematical derivations or additional applications? 🚀"
+    "Transformers have become the backbone of modern AI models, surpassing older architectures in efficiency and effectiveness. Future research explores **sparse attention** and **efficient transformers** to improve scalability."
    ]
   }
  ],
